// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`makeLoggable logs 1`] = `
Array [
  "%c[C] color:#28B7F6 StoreWithComputed.isDividedBy3 [object Object] -> true",
  "%c[A] color:#FF6157 StoreWithComputed.increment ",
  "%c[O] color:#FFBC2D StoreWithComputed.value 0 -> 1",
  "%c[C] color:#28B7F6 StoreWithComputed.isDividedBy3 true -> false",
  "%c[A] color:#FF6157 StoreOnlyObservables.init ",
]
`;

exports[`makeLoggable logs 2`] = `
Array [
  "%c[C] color:#28B7F6 StoreWithComputed.isDividedBy3 [object Object] -> true",
  "%c[A] color:#FF6157 StoreWithComputed.increment ",
  "%c[O] color:#FFBC2D StoreWithComputed.value 0 -> 1",
  "%c[C] color:#28B7F6 StoreWithComputed.isDividedBy3 true -> false",
  "%c[A] color:#FF6157 StoreOnlyObservables.init ",
  "%c[A] color:#FF6157 StoreWithComputed.increment ",
  "%c[O] color:#FFBC2D StoreWithComputed.value 1 -> 2",
  "%c[A] color:#FF6157 StoreWithComputed.increment ",
  "%c[O] color:#FFBC2D StoreWithComputed.value 2 -> 3",
  "%c[C] color:#28B7F6 StoreWithComputed.isDividedBy3 false -> true",
]
`;

exports[`makeLoggable logs array changes correctly 1`] = `
Array [
  "%c[A] color:#FF6157 TodoStore.addTodo 1,Play balalaika",
]
`;

exports[`makeLoggable logs array changes correctly 2`] = `
Array [
  "%c[A] color:#FF6157 TodoStore.addTodo 1,Play balalaika",
  "%c[A] color:#FF6157 TodoStore.markAsDone 1",
  "%c[O] color:#FFBC2D TodoStore.todos[..].isDone false -> true",
]
`;
